--- a/css/main.css
+++ b/css/main.css
@@ -60,8 +60,8 @@ html, body {
 }
 
 body {
-	background:url(../img/dark_wall.png) repeat;
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+/*	background:url(../img/dark_wall.png) repeat;
+*/	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	color: #7E8385;
 	font-size:15px;
 	line-height: 2;
@@ -1497,14 +1497,16 @@ section:nth-child(odd) {
 	display: none;
 }
 #head #slides .slides-container .imgOpac{
-	opacity:.5;
+	opacity:.3;
+	position: relative;
+	z-index: -1;
 }
 
 #welcome .introduction-table .row{
 	margin-bottom:10px;
 }
 #clients{
-	background:#F5F5F5;
+	background:#fff;
 }
 
 #client-logo {
@@ -1513,6 +1515,12 @@ section:nth-child(odd) {
 	margin-right: auto;
 	width: 50%;
 
+}
+#serviceBackgroundColor {
+	width:100%;
+	background:#f5f5f5;
+	position: relative;
+	z-index: 9;
 }
 #testimonials{
 	background:#F5F5F5;
