--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,12 @@
 	width: 100%;
 }
 
+#serviceBackgroundColor .text_info {
+	margin:30px auto;
+	padding:0 100px; 
+}
+
+
 
 /*GENERAL STYLING*/
 
@@ -78,6 +84,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 h3{
 	font-size:18px;
+	color:#ddd;
 }
 h4{
 	text-transform:uppercase;
@@ -166,7 +173,7 @@ a {
 .bar3 {
     transform:rotate(55deg);
     position: relative;
-    top:-3px;
+    top:-1px;
     left:1px;
     animation-name:barUp;
     animation-duration:0.5s;
@@ -1818,6 +1825,10 @@ hr.not-visible{
 		float:none;
 		display:block;
 	}
+	#serviceBackgroundColor .text_info {
+		margin:30px auto;
+		padding:0 60px; 
+}
 }
 
 
