--- a/css/main.css
+++ b/css/main.css
@@ -1253,6 +1253,24 @@ a {
 	transition: background 0.5s ease 0s;
 }
 
+.tagIcon {
+	float: left;
+	height: 30px;
+	line-height: 28px;
+	position: relative;
+	margin-bottom: 10px;
+	padding: 0 15px 0 15px;
+	background: #4F4F4F;
+	color: white;
+	text-decoration: none;
+	border-radius: 0 4px 4px 0;
+	margin-right: 25px;
+	-webkit-transition: background 0.5s ease 0s;
+	-moz-transition: background 0.5s ease 0s;
+	-o-transition: background 0.5s ease 0s;
+	transition: background 0.5s ease 0s;
+}
+
 .portfolio-container .tagIcon:before {
 	content: "";
 	position: absolute;
