--- a/css/main.css
+++ b/css/main.css
@@ -938,37 +938,8 @@ a {
 	-o-transition: background 0.3s linear 0s, color 0.3s linear 0s;
 	transition: background 0.3s linear 0s, color 0.3s linear 0s;
 }
-.feature .icon{
-	font-size:60px;
-	line-height:60px;
-
-}
-.feature .headline h3{
-	font-weight:400;
-}
-.feature .text p{
-	padding-left:25px;
-	padding-right:25px;
-}
-.feature:hover{
-	background-color:#2F3238;
-	color:white;
-}
-.feature:hover h3,
-.feature:hover .feature .icon{
-	color:#fff;
-}
-.feature .background-icon{
-	position:absolute;
-	bottom: 20px;
-    font-size: 150px;
-    line-height: 150px;
-    opacity: 0.07;
-    position: absolute;
-    right: 20px;
-}
-.feature .background-icon .fa{
-	opacity: 0.03;
+.aboutInfo {
+	margin-left:50px;
 }
 
 /*TESTIMONIALS*/
@@ -1880,7 +1851,13 @@ hr.not-visible{
 	#serviceBackgroundColor .text_info {
 		margin:30px auto;
 		padding:0 60px; 
-}
+	}
+	.aboutInfo {
+		margin-left:0;
+	}
+	.aboutIcon {
+		
+	}
 }
 
 
