fixing mobile responsive on landing logo and services on index

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
 }
 .cuadro_intro_hover img{
 	z-index: 4;
+	width: 150%;
 }
 
 .cuadro_intro_hover .caption{
@@ -124,11 +125,7 @@ a {
 	padding-right:25px;
 	padding-top:15px;
 	padding-bottom:15px;
-<<<<<<< Updated upstream
 	color: #676767;
-=======
-	color: #67676red;
->>>>>>> Stashed changes
 	text-transform: uppercase;
 	-webkit-transition: all 0.5s ease 0s;
 	-moz-transition: all 0.5s ease 0s;
@@ -1820,6 +1817,13 @@ hr.not-visible{
 	footer .pull-right {
 		float: none !important;
 	}
+	.col-lg-3 {
+		margin-bottom: 6px;
+	}
+	#landingLogo {
+		display: block;
+		margin: 0 auto;
+	}
 
 }
 @media only screen and (max-width: 768px) { /*col-md*/
@@ -1853,8 +1857,12 @@ hr.not-visible{
 	.aboutInfo {
 		margin-left:0;
 	}
-	.aboutIcon {
-		
+	.col-lg-3 {
+		margin-bottom: 6px;
+	}
+	#landingLogo {
+		display: block;
+		margin: 0 auto;
 	}
 }
 
