--- a/css/main.css
+++ b/css/main.css
@@ -1438,7 +1438,7 @@ section:nth-child(odd) {
 	line-height:30px;
 	letter-spacing:3px;
 	font-family: "Montserrat", Helvetica, Arial, sans-serif;
-	margin-bottom:60px;
+	margin-bottom:40px;
 }
 .hero p{
 	font-weight:100;
@@ -1827,7 +1827,7 @@ hr.not-visible{
 
 }
 @media only screen and (max-width: 768px) { /*col-md*/
-	#head .hero h1 {
+	#head .hero h2 {
 		font-size:35px;
 		line-height:35px;
 	}
@@ -1862,7 +1862,8 @@ hr.not-visible{
 	}
 	#landingLogo {
 		display: block;
-		margin: 0 auto;
+		max-width: 50%;
+		height: auto;
 	}
 }
 
