--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,29 @@
 	padding:0 100px; 
 }
 
+#services {
+	font-size: 11pt;
+	font-weight: 500;
+}
+
+#services h2, h3 {
+	font-weight: bold;
+}
+
+#services h3 {
+	font-weight: bold;
+
+}
+
+#services .space{
+	width:100px;
+	height:4px;
+	background-color:#000;
+	margin:0 auto;
+	margin-top:50px;
+	margin-bottom:25px;
+}
+
 /*GENERAL STYLING*/
 
 html, body {
@@ -68,7 +91,7 @@ html, body {
 body {
 /*	background:url(../img/dark_wall.png) repeat;
 */	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	color: #7E8385;
+	color: rgb(45, 48, 49);
 	font-size:15px;
 	line-height: 2;
 	font-weight:100;
@@ -938,6 +961,9 @@ a {
 }
 .aboutInfo {
 	margin-left:50px;
+	font-size: 12.5pt;
+	font-weight: 500;
+
 }
 
 /*TESTIMONIALS*/
@@ -960,7 +986,7 @@ a {
 
 
 /* THUMB MIDDLE MODULE*/
-.thumb-middle {
+/* .thumb-middle {
     border: 4px solid #FFFFFF;
     border-radius: 50%;
     height: 160px;
@@ -969,7 +995,8 @@ a {
     width: 160px;
     display: block;
     margin: -200px auto 10px;
-}
+} */
+
 /* INFOBOX MODULE */
 .icon-effect {
 	border-radius: 50%;
